--- a/pages/about.html
+++ b/pages/about.html
@@ -100,22 +100,18 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-5">
-            <img class="img-fluid rounded mb-5 mb-lg-0" src="https://placehold.co/600x400/png" alt="" />
+            <img class="img-fluid rounded mb-5 mb-lg-0" src="../images/about/komand.JPG" alt="" />
           </div>
           <div class="col-lg-7">
             <p class="section-title">
               <span class="text-uppercase">Tentang komandro</span>
             </p>
             <h1 class="mb-4">Apa itu Komandro?</h1>
-            <p>
-              Invidunt lorem justo sanctus clita. Erat lorem labore ea, justo
-              dolor lorem ipsum ut sed eos, ipsum et dolor kasd sit ea justo.
-              Erat justo sed sed diam. Ea et erat ut sed diam sea ipsum est
-              dolor Lorem ipsum dolor sit amet consectetur, adipisicing elit. A, cum?Lorem ipsum dolor sit amet
-              consectetur, adipisicing elit. Minus, aliquid! Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-              Quisquam odit sit officia facilis tempore sequi laudantium optio saepe molestias rem itaque quae corrupti
-              hic placeat tenetur, quia pariatur. Qui, itaque.
-            </p </div>
+            <p>Komunitas Android (Komandro) merupakan suatu wadah untuk mahasiswa/i
+              CCIT-FTUI belajar dan berdiskusi bersama tentang bidang-bidang teknologi informasi
+              di luar jadwal perkuliahan. Komandro mempunyai tujuan untuk meningkatkan
+              pendidikan di bidang teknologi informasi dengan memfasilitasi dan mendorong
+              generasi muda CCIT-FTUI untuk dapat mengembangkan potensi dirinya.</p>
           </div>
         </div>
       </div>
@@ -154,41 +150,41 @@
             <!-- Wrapper for carousel items -->
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <div class="row">
+                <div class="row d-flex align-items-center">
                   <div class="col-sm-4">
-                    <div class="img-box"><img src="https://placehold.co/600x400/png" class="img-fluid" alt=""></div>
+                    <div class="img-box"><img src="../images/about/ab1.png" class="img-fluid" alt=""></div>
                   </div>
                   <div class="col-sm-4">
-                    <div class="img-box"><img src="https://placehold.co/600x400/png" class="img-fluid" alt=""></div>
+                    <div class="img-box"><img src="../images/about/ab2.png" class="img-fluid" alt=""></div>
                   </div>
                   <div class="col-sm-4">
-                    <div class="img-box"><img src="https://placehold.co/600x400/png" class="img-fluid" alt=""></div>
-                  </div>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <div class="row">
-                  <div class="col-sm-4">
-                    <div class="img-box"><img src="https://placehold.co/600x400/png" class="img-fluid" alt=""></div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="img-box"><img src="https://placehold.co/600x400/png" class="img-fluid" alt=""></div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="img-box"><img src="https://placehold.co/600x400/png" class="img-fluid" alt=""></div>
+                    <div class="img-box"><img src="../images/about/ab3.JPG" class="img-fluid" alt=""></div>
                   </div>
                 </div>
               </div>
               <div class="carousel-item">
-                <div class="row">
+                <div class="row d-flex align-items-center">
                   <div class="col-sm-4">
-                    <div class="img-box"><img src="https://placehold.co/600x400/png" class="img-fluid" alt=""></div>
+                    <div class="img-box"><img src="../images/about/ab4.jpeg" class="img-fluid" alt=""></div>
                   </div>
                   <div class="col-sm-4">
-                    <div class="img-box"><img src="https://placehold.co/600x400/png" class="img-fluid" alt=""></div>
+                    <div class="img-box"><img src="../images/about/ab5.jpeg" class=" img-fluid" alt=""></div>
                   </div>
                   <div class="col-sm-4">
-                    <div class="img-box"><img src="https://placehold.co/600x400/png" class="img-fluid" alt=""></div>
+                    <div class="img-box"><img src="../images/about/ab6.jpeg" class=" img-fluid" alt=""></div>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="row d-flex align-items-center">
+                  <div class="col-sm-4">
+                    <div class="img-box"><img src="../images/about/ab7.jpeg" class="img-fluid" alt=""></div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="img-box"><img src="../images/about/ab8.jpeg" class="img-fluid" alt=""></div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="img-box"><img src="../images/about/ab9.JPG" class="img-fluid" alt=""></div>
                   </div>
                 </div>
               </div>
@@ -228,15 +224,14 @@
         <!-- Facilities Start -->
         <div class="container-fluid pt-5">
           <div class="container pb-3">
-            <div class="row">
+            <div class="row d-flex align-items-start justify-content-evenly">
               <div class="col-lg-4 col-md-6 pb-1">
                 <div class="d-flex bg-light shadow-sm border-top rounded mb-4" style="padding: 30px">
                   <!--icon di sini-->
                   <div class="pl-4">
-                    <h4>kobo kanaeru</h4>
+                    <h4>Pengembangan</h4>
                     <p class="m-0">
-                      Kasd labore kasd et dolor est rebum dolor ut, clita dolor vero
-                      lorem amet elitr vero...
+                      Menjadi wadah mahasiswa CCIT FTUI untuk menambah wawasan di bidang teknologi informasi.
                     </p>
                   </div>
                 </div>
@@ -245,10 +240,10 @@
                 <div class="d-flex bg-light shadow-sm border-top rounded mb-4" style="padding: 30px">
                   <!--icon di sini-->
                   <div class="pl-4">
-                    <h4>Lorem, ipsum dolor.</h4>
+                    <h4>Peningkatan</h4>
                     <p class="m-0">
-                      Kasd labore kasd et dolor est rebum dolor ut, clita dolor vero
-                      lorem amet elitr vero...
+                      Ikut berperan dalam meningkatkan mutu pendidikan mahasiswa CCIT FTUI agar dapat menjadi SDM yang
+                      mempunyai kemampuan yang tinggi dalam bidang teknologi informasi.
                     </p>
                   </div>
                 </div>
@@ -257,10 +252,9 @@
                 <div class="d-flex bg-light shadow-sm border-top rounded mb-4" style="padding: 30px">
                   <!--icon di sini-->
                   <div class="pl-4">
-                    <h4>Lorem, ipsum dolor.</h4>
+                    <h4>Keterlibatan</h4>
                     <p class="m-0">
-                      Kasd labore kasd et dolor est rebum dolor ut, clita dolor vero
-                      lorem amet elitr vero...
+                      Mengajak mahasiswa CCIT FTUI agar aktif dalam organisasi komunitas.
                     </p>
                   </div>
                 </div>
@@ -269,10 +263,10 @@
                 <div class="d-flex bg-light shadow-sm border-top rounded mb-4" style="padding: 30px">
                   <!--icon di sini-->
                   <div class="pl-4">
-                    <h4>Lorem, ipsum.</h4>
+                    <h4>kolaborasi</h4>
                     <p class="m-0">
-                      Kasd labore kasd et dolor est rebum dolor ut, clita dolor vero
-                      lorem amet elitr vero...
+                      Menjalin hubungan kerja sama dengan lembaga internal maupun eksternal
+                      CCIT FTUI demi perkembangan komunitas.
                     </p>
                   </div>
                 </div>
@@ -281,22 +275,10 @@
                 <div class="d-flex bg-light shadow-sm border-top rounded mb-4" style="padding: 30px">
                   <!--icon di sini-->
                   <div class="pl-4">
-                    <h4>Lorem, ipsum dolor.</h4>
+                    <h4>Prestasi</h4>
                     <p class="m-0">
-                      Kasd labore kasd et dolor est rebum dolor ut, clita dolor vero
-                      lorem amet elitr vero...
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-4 col-md-6 pb-1">
-                <div class="d-flex bg-light shadow-sm border-top rounded mb-4" style="padding: 30px">
-                  <!--icon di sini-->
-                  <div class="pl-4">
-                    <h4>Lorem, ipsum.</h4>
-                    <p class="m-0">
-                      Kasd labore kasd et dolor est rebum dolor ut, clita dolor vero
-                      lorem amet elitr vero...
+                      Berpartisipasi dalam kompetisi dalam rangka mengharumkan nama CCIT
+                      FTUI.
                     </p>
                   </div>
                 </div>
@@ -397,36 +379,60 @@
               <div class="single-timeline-area">
                 <div class="timeline-date wow fadeInLeft" data-wow-delay="0.1s"
                   style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInLeft;">
-                  <p>Near Future</p>
+                  <p>2024</p>
                 </div>
                 <div class="row">
                   <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-timeline-content d-flex wow fadeInLeft" data-wow-delay="0.3s"
                       style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInLeft;">
-                      <div class="timeline-icon"><i class="fa fa-address-card" aria-hidden="true"></i></div>
                       <div class="timeline-text">
-                        <h6>Updated 5.0</h6>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <a
+                          href="https://medium.com/komandro-ccit-ftui/get-started-with-us-komandros-staff-faces-2023-2024-cf447eba5098">
+                          <div class="card">
+                            <img
+                              src="https://miro.medium.com/v2/resize:fit:720/format:webp/1*bIviyB8mtohQo3h0PGiG8g.jpeg"
+                              class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">Komandro's Staff 2023-2024</h5>
+                            </div>
+                          </div>
+                        </a>
                       </div>
                     </div>
                   </div>
                   <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-timeline-content d-flex wow fadeInLeft" data-wow-delay="0.5s"
                       style="visibility: visible; animation-delay: 0.5s; animation-name: fadeInLeft;">
-                      <div class="timeline-icon"><i class="fa fa-archive" aria-hidden="true"></i></div>
                       <div class="timeline-text">
-                        <h6>Fixed bug</h6>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <a
+                          href="https://medium.com/komandro-ccit-ftui/open-house-komandro-explore-komandros-universe-2faec3d85292">
+                          <div class="card">
+                            <img
+                              src="https://miro.medium.com/v2/resize:fit:720/format:webp/1*TL_SZz8c0Vz1oSkgY_k26g.jpeg"
+                              class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">Open House Komandro 2024</h5>
+                            </div>
+                          </div>
+                        </a>
                       </div>
                     </div>
                   </div>
                   <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-timeline-content d-flex wow fadeInLeft" data-wow-delay="0.7s"
                       style="visibility: visible; animation-delay: 0.7s; animation-name: fadeInLeft;">
-                      <div class="timeline-icon"><i class="fa fa-address-book" aria-hidden="true"></i></div>
                       <div class="timeline-text">
-                        <h6>Reach 1k Users</h6>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <a
+                          href="https://medium.com/komandro-ccit-ftui/kombyte-2024-bridging-minds-and-technologies-for-social-impact-90592111e541">
+                          <div class="card">
+                            <img
+                              src="https://miro.medium.com/v2/resize:fit:720/format:webp/1*JtHaeGAfsaPR4dNTH6VIvQ.jpeg"
+                              class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">KomByte 2024</h5>
+                            </div>
+                          </div>
+                        </a>
                       </div>
                     </div>
                   </div>
@@ -436,65 +442,42 @@
               <div class="single-timeline-area">
                 <div class="timeline-date wow fadeInLeft" data-wow-delay="0.1s"
                   style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInLeft;">
-                  <p>2022</p>
+                  <p>2023</p>
                 </div>
                 <div class="row">
                   <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-timeline-content d-flex wow fadeInLeft" data-wow-delay="0.3s"
                       style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInLeft;">
-                      <div class="timeline-icon"><i class="fa fa-briefcase" aria-hidden="true"></i></div>
                       <div class="timeline-text">
-                        <h6>Updated 4.4.0</h6>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <a
+                          href="https://medium.com/komandro-ccit-ftui/melangkah-ke-pintu-gerbang-baru-kisah-indah-di-hari-convocation-2023-2c8a25f701f4">
+                          <div class="card">
+                            <img
+                              src="https://miro.medium.com/v2/resize:fit:720/format:webp/1*sK_RU6Ffkm_qeOaLCvXP5g.jpeg"
+                              class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">Convocation 2023</h5>
+                            </div>
+                          </div>
+                        </a>
                       </div>
                     </div>
                   </div>
                   <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-timeline-content d-flex wow fadeInLeft" data-wow-delay="0.5s"
                       style="visibility: visible; animation-delay: 0.5s; animation-name: fadeInLeft;">
-                      <div class="timeline-icon"><i class="fa fa-desktop" aria-hidden="true"></i></div>
                       <div class="timeline-text">
-                        <h6>Fixed bug</h6>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <!-- Single Timeline Content-->
-              <div class="single-timeline-area">
-                <div class="timeline-date wow fadeInLeft" data-wow-delay="0.1s"
-                  style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInLeft;">
-                  <p>2021</p>
-                </div>
-                <div class="row">
-                  <div class="col-12 col-md-6 col-lg-4">
-                    <div class="single-timeline-content d-flex wow fadeInLeft" data-wow-delay="0.3s"
-                      style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInLeft;">
-                      <div class="timeline-icon"><i class="fa fa-id-card" aria-hidden="true"></i></div>
-                      <div class="timeline-text">
-                        <h6>Updated 4.0</h6>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-12 col-md-6 col-lg-4">
-                    <div class="single-timeline-content d-flex wow fadeInLeft" data-wow-delay="0.5s"
-                      style="visibility: visible; animation-delay: 0.5s; animation-name: fadeInLeft;">
-                      <div class="timeline-icon"><i class="fa fa-desktop" aria-hidden="true"></i></div>
-                      <div class="timeline-text">
-                        <h6>Fixed bug</h6>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-12 col-md-6 col-lg-4">
-                    <div class="single-timeline-content d-flex wow fadeInLeft" data-wow-delay="0.7s"
-                      style="visibility: visible; animation-delay: 0.7s; animation-name: fadeInLeft;">
-                      <div class="timeline-icon"><i class="fa fa-picture-o" aria-hidden="true"></i></div>
-                      <div class="timeline-text">
-                        <h6>Reach 500 Users</h6>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <a
+                          href="https://medium.com/@ccitkomandro/perjalanan-yang-penuh-inspirasi-community-visit-komandro-ke-mnctv-bc60c1ff5b18">
+                          <div class="card">
+                            <img
+                              src="https://miro.medium.com/v2/resize:fit:720/format:webp/1*hOPOeUqWCT8ErUTqTrMeKg.jpeg"
+                              class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">Company Visit : MNC TV</h5>
+                            </div>
+                          </div>
+                        </a>
                       </div>
                     </div>
                   </div>
