fixing abaut button

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               :)
             </span>
           </h1>
-          <a href="/pages/about.html" style="text-decoration: none"><button type="button"
+          <a href="./pages/about.html" style="text-decoration: none"><button type="button"
               class="rounded-pill btn-rounded">
               About us!
               <span><i class="fas fa-arrow-right"></i></span></button></a>
